[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/TimePowerup.gd" type="Script" id=1]
[ext_resource path="res://Assets/powerup_small.png" type="Texture" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.533333, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.501961, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.5275 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0179796, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
trail_size_modifier = SubResource( 6 )
emission_shape = 1
emission_sphere_radius = 64.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 15.0
angular_velocity = 64.0
orbit_velocity = 0.5
orbit_velocity_random = 0.0
linear_accel = 128.0
scale = 8.0
scale_random = 1.0
scale_curve = SubResource( 4 )
color_ramp = SubResource( 2 )
hue_variation = 0.5
hue_variation_random = 1.0

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 64, 64 )

[node name="TimePowerup" type="Area2D"]
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
amount = 512
lifetime = 2.0
preprocess = 16.0
speed_scale = 0.1
fixed_fps = 24
local_coords = false
process_material = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="." to="." method="_on_TimePowerup_body_entered"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
